--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.2",
-    "jest": "25.2.0",
+    "jest": "25.2.3",
     "prettier": "2.0.2",
     "remark-cli": "7.0.1",
     "remark-lint": "6.0.6",
@@ -66,12 +66,12 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
-    "lint": "eslint ./src/**/*.js",
+    "lint": "eslint ./src/**/*.mjs",
     "lint-md": "remark .",
     "test": "jest",
     "upgrade": "yarn upgrade-interactive --latest"
   },
   "type": "module",
   "types": "./dist/local.d.ts",
-  "version": "0.0.6"
+  "version": "0.0.7"
 }
