--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.1.3"
+    "@r37r0m0d3l/of": "2.2.1"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-private-methods": "7.8.3",
-    "@babel/preset-env": "7.9.0",
+    "@babel/preset-env": "7.9.5",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "7.1.1",
     "babel-core": "7.0.0-bridge.0",
@@ -26,23 +26,34 @@
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.2",
     "jest": "25.2.7",
-    "prettier": "2.0.2",
+    "prettier": "2.0.4",
     "remark-cli": "8.0.0",
     "remark-lint": "7.0.0",
     "remark-preset-lint-consistent": "3.0.0",
     "remark-preset-lint-markdown-style-guide": "3.0.0",
     "remark-preset-lint-recommended": "4.0.0",
-    "rollup": "2.3.2",
+    "rollup": "2.3.3",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=12.9.0"
   },
+  "engineStrict": true,
   "exports": {
-    ".": "./dist/local.cjs",
-    "./default": "./dist/local.cjs",
-    "./es": "./dist/local.mjs"
+    ".": {
+      "browser": {
+        "import": "./dist/local.mjs",
+        "require": "./dist/local.cjs"
+      },
+      "node": {
+        "import": "./dist/local.mjs",
+        "require": "./dist/local.cjs"
+      },
+      "import": "./dist/local.mjs",
+      "require": "./dist/local.cjs",
+      "default": "./dist/local.js"
+    }
   },
   "files": [
     "dist/local.cjs",
@@ -59,6 +70,7 @@
   ],
   "license": "MIT",
   "main": "./dist/local.cjs",
+  "module": "./dist/local.mjs",
   "name": "@hilesystem/local",
   "repository": {
     "type": "git",
@@ -73,5 +85,5 @@
   },
   "type": "module",
   "types": "./dist/local.d.ts",
-  "version": "0.0.8"
+  "version": "0.0.9"
 }
