--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-jsdoc": "23.0.1",
     "eslint-plugin-prettier": "3.1.3",
     "jest": "25.3.0",
+    "npm-check": "5.9.2",
     "prettier": "2.0.4",
     "remark-cli": "8.0.0",
     "remark-lint": "7.0.0",
@@ -85,11 +87,11 @@
     "build": "rollup --config rollup.config.mjs",
     "lint": "eslint ./src/**/*.mjs",
     "lint-md": "remark .",
+    "package:upgrade": "npm-check --update",
     "test": "jest",
-    "test:coverage": "jest --collect-coverage",
-    "upgrade": "yarn upgrade-interactive --latest"
+    "test:coverage": "jest --collect-coverage"
   },
   "type": "module",
   "types": "./dist/local.d.ts",
-  "version": "0.0.11"
+  "version": "0.0.12"
 }
