--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.2.1"
+    "@r37r0m0d3l/of": "2.3.0"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
@@ -23,18 +23,18 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-jsdoc": "23.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-jsdoc": "24.0.0",
     "eslint-plugin-prettier": "3.1.3",
-    "jest": "25.3.0",
+    "jest": "25.4.0",
     "npm-check": "5.9.2",
-    "prettier": "2.0.4",
+    "prettier": "2.0.5",
     "remark-cli": "8.0.0",
     "remark-lint": "7.0.0",
     "remark-preset-lint-consistent": "3.0.0",
     "remark-preset-lint-markdown-style-guide": "3.0.0",
     "remark-preset-lint-recommended": "4.0.0",
-    "rollup": "2.6.1",
+    "rollup": "2.7.2",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0"
   },
@@ -86,7 +86,7 @@
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "lint": "eslint ./src/**/*.mjs",
-    "lint-md": "remark .",
+    "lint:md": "remark .",
     "package:upgrade": "npm-check --update",
     "test": "jest",
     "test:coverage": "jest --collect-coverage"
