--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.3.0"
+    "@r37r0m0d3l/of": "2.3.2"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "7.9.6",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-private-methods": "7.8.3",
-    "@babel/preset-env": "7.9.5",
+    "@babel/preset-env": "7.9.6",
     "@rollup/plugin-commonjs": "11.1.0",
     "@rollup/plugin-node-resolve": "7.1.3",
+    "@types/node": "13.13.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jsdoc": "24.0.0",
     "eslint-plugin-prettier": "3.1.3",
-    "jest": "25.4.0",
+    "jest": "25.5.4",
     "npm-check": "5.9.2",
     "prettier": "2.0.5",
     "remark-cli": "8.0.0",
@@ -34,7 +35,7 @@
     "remark-preset-lint-consistent": "3.0.0",
     "remark-preset-lint-markdown-style-guide": "3.0.0",
     "remark-preset-lint-recommended": "4.0.0",
-    "rollup": "2.7.2",
+    "rollup": "2.7.6",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0"
   },
@@ -93,5 +94,5 @@
   },
   "type": "module",
   "types": "./dist/local.d.ts",
-  "version": "0.0.12"
+  "version": "0.1.0"
 }
