--- a/package.json
+++ b/package.json
@@ -14,14 +14,8 @@
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-private-methods": "7.8.3",
-    "@babel/preset-env": "7.9.6",
-    "@rollup/plugin-commonjs": "11.1.0",
-    "@rollup/plugin-node-resolve": "7.1.3",
+    "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
     "@types/node": "13.13.4",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
@@ -34,10 +28,7 @@
     "remark-lint": "7.0.0",
     "remark-preset-lint-consistent": "3.0.0",
     "remark-preset-lint-markdown-style-guide": "3.0.0",
-    "remark-preset-lint-recommended": "4.0.0",
-    "rollup": "2.7.6",
-    "rollup-plugin-babel": "4.4.0",
-    "rollup-plugin-terser": "5.3.0"
+    "remark-preset-lint-recommended": "4.0.0"
   },
   "engines": {
     "node": ">=12.9.0"
@@ -46,26 +37,26 @@
   "exports": {
     ".": {
       "browser": {
-        "import": "./dist/local.mjs",
-        "require": "./dist/local.cjs"
+        "import": "./dist/index.mjs",
+        "require": "./dist/index.cjs"
       },
       "node": {
-        "import": "./dist/local.mjs",
-        "require": "./dist/local.cjs"
+        "import": "./dist/index.mjs",
+        "require": "./dist/index.cjs"
       },
-      "import": "./dist/local.mjs",
-      "require": "./dist/local.cjs",
-      "default": "./dist/local.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
     }
   },
   "files": [
-    "dist/local.cjs",
-    "dist/local.cjs.map",
-    "dist/local.d.ts",
-    "dist/local.js",
-    "dist/local.js.map",
-    "dist/local.mjs",
-    "dist/local.mjs.map"
+    "dist/index.cjs",
+    "dist/index.cjs.map",
+    "dist/index.d.ts",
+    "dist/index.js",
+    "dist/index.js.map",
+    "dist/index.mjs",
+    "dist/index.mjs.map"
   ],
   "jest": {
     "verbose": true
@@ -77,8 +68,8 @@
     "fs"
   ],
   "license": "MIT",
-  "main": "./dist/local.cjs",
-  "module": "./dist/local.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "name": "@hilesystem/local",
   "repository": {
     "type": "git",
@@ -86,6 +77,7 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
+    "build:watch": "rollup --config rollup.config.mjs --watch",
     "lint": "eslint ./src/**/*.mjs",
     "lint:md": "remark .",
     "package:upgrade": "npm-check --update",
@@ -93,6 +85,6 @@
     "test:coverage": "jest --collect-coverage"
   },
   "type": "module",
-  "types": "./dist/local.d.ts",
-  "version": "0.1.0"
+  "types": "./dist/index.d.ts",
+  "version": "0.1.1"
 }
