--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.4.0"
+    "@r37r0m0d3l/of": "2.4.4"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
-    "@types/node": "13.13.5",
+    "@types/node": "14.6.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.0.0",
+    "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-jsdoc": "25.0.1",
-    "eslint-plugin-prettier": "3.1.3",
-    "jest": "26.0.1",
+    "eslint-plugin-jsdoc": "30.2.4",
+    "eslint-plugin-prettier": "3.1.4",
+    "jest": "26.4.0",
     "npm-check": "5.9.2",
     "prettier": "2.0.5",
-    "remark-cli": "8.0.0",
-    "remark-lint": "7.0.0",
-    "remark-preset-lint-consistent": "3.0.0",
-    "remark-preset-lint-markdown-style-guide": "3.0.0",
-    "remark-preset-lint-recommended": "4.0.0"
+    "remark-cli": "8.0.1",
+    "remark-lint": "7.0.1",
+    "remark-preset-lint-consistent": "3.0.1",
+    "remark-preset-lint-markdown-style-guide": "3.0.1",
+    "remark-preset-lint-recommended": "4.0.1"
   },
   "engines": {
     "node": ">=12.9.0"
@@ -78,7 +78,7 @@
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "build:watch": "rollup --config rollup.config.mjs --watch",
-    "lint": "eslint ./src/**/*.mjs",
+    "lint": "eslint ./src/**/*.js",
     "lint:md": "remark .",
     "package:upgrade": "npm-check --update",
     "test": "jest",
@@ -86,5 +86,5 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.1.8"
+  "version": "0.1.9"
 }
