--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.4.4"
+    "@r37r0m0d3l/of": "2.4.5"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
@@ -80,11 +80,11 @@
     "build:watch": "rollup --config rollup.config.mjs --watch",
     "lint": "eslint ./src/**/*.js",
     "lint:md": "remark .",
-    "package:upgrade": "npm-check --update",
+    "package:upgrade": "npx npm-check --update",
     "test": "jest",
     "test:coverage": "jest --collect-coverage"
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.1.15"
+  "version": "0.1.16"
 }
