--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     }
   ],
   "dependencies": {
-    "@r37r0m0d3l/of": "2.4.7"
+    "@await-of/of": "2.4.8"
   },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
-    "@types/node": "14.14.10",
+    "@types/node": "14.14.14",
     "babel-eslint": "10.1.0",
-    "eslint": "7.14.0",
-    "eslint-config-prettier": "6.15.0",
+    "eslint": "7.15.0",
+    "eslint-config-prettier": "7.0.0",
     "eslint-plugin-jsdoc": "30.7.8",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-prettier": "3.3.0",
     "jest": "26.6.3",
     "npm-check": "5.9.2",
     "prettier": "2.2.1",
@@ -86,5 +86,5 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.1.29"
+  "version": "0.1.30"
 }
