--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
-    "@types/node": "14.14.37",
+    "@types/node": "16.4.7",
     "babel-eslint": "10.1.0",
-    "eslint": "7.23.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-jsdoc": "32.3.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "jest": "26.6.3",
+    "eslint": "7.31.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-jsdoc": "36.0.6",
+    "eslint-plugin-prettier": "3.4.0",
+    "jest": "27.0.6",
     "npm-check": "5.9.2",
-    "prettier": "2.2.1",
+    "prettier": "2.3.2",
     "remark-cli": "9.0.0",
     "remark-lint": "8.0.0",
     "remark-preset-lint-consistent": "4.0.0",
@@ -31,7 +31,7 @@
     "remark-preset-lint-recommended": "5.0.0"
   },
   "engines": {
-    "node": ">=12.9.0"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "engineStrict": true,
   "exports": {
@@ -86,5 +86,5 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.1.35"
+  "version": "0.1.36"
 }
