--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
     "@types/node": "12.20.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jsdoc": "36.0.7",
-    "eslint-plugin-prettier": "3.4.0",
-    "jest": "27.5.1",
-    "npm-check": "5.9.2",
-    "prettier": "2.5.1",
+    "eslint": "8.23.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jsdoc": "39.3.6",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "29.0.3",
+    "npm-check": "6.0.1",
+    "prettier": "2.7.1",
     "remark-cli": "10.0.1",
     "remark-lint": "8.0.0",
     "remark-preset-lint-consistent": "4.0.0",
@@ -53,6 +53,8 @@
   "files": [
     "dist/index.cjs",
     "dist/index.cjs.map",
+    "dist/index.d.cts",
+    "dist/index.d.mts",
     "dist/index.d.ts",
     "dist/index.js",
     "dist/index.js.map",
@@ -87,5 +89,5 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.2.2"
+  "version": "0.2.3"
 }
