--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "author": "Anton Trofimenko",
+  "author": "Anton Trofymenko",
   "bugs": {
     "url": "https://github.com/hilesystem/local/issues"
   },
   "contributors": [
     {
       "email": "r37r0m0d3l@protonmail.com",
-      "name": "Anton Trofimenko"
+      "name": "Anton Trofymenko"
     }
   ],
   "dependencies": {
@@ -15,20 +15,19 @@
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
-    "@types/node": "12.20.0",
+    "@types/node": "18.15.12",
     "babel-eslint": "10.1.0",
-    "eslint": "8.23.1",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-jsdoc": "39.3.6",
+    "eslint": "8.38.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-jsdoc": "43.0.6",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.0.3",
     "npm-check": "6.0.1",
-    "prettier": "2.7.1",
-    "remark-cli": "10.0.1",
-    "remark-lint": "8.0.0",
-    "remark-preset-lint-consistent": "4.0.0",
-    "remark-preset-lint-markdown-style-guide": "4.0.0",
-    "remark-preset-lint-recommended": "5.0.0"
+    "prettier": "2.8.7",
+    "remark-cli": "11.0.0",
+    "remark-lint": "9.1.1",
+    "remark-preset-lint-consistent": "5.1.1",
+    "remark-preset-lint-markdown-style-guide": "5.1.2",
+    "remark-preset-lint-recommended": "6.1.2"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
@@ -61,9 +60,6 @@
     "dist/index.mjs",
     "dist/index.mjs.map"
   ],
-  "jest": {
-    "verbose": true
-  },
   "keywords": [
     "@hilesystem",
     "file system",
@@ -84,10 +80,11 @@
     "lint": "eslint ./src/**/*.js",
     "lint:md": "remark .",
     "package:upgrade": "npx npm-check --update",
-    "test": "jest",
-    "test:coverage": "jest --collect-coverage"
+    "test": "npm run test:cjs && npm run test:mjs",
+    "test:cjs": "node --test ./test/index.test.cjs",
+    "test:mjs": "node --test ./test/index.test.mjs"
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.2.5"
+  "version": "0.2.6"
 }
