--- a/.github/workflows/robin.yml
+++ b/.github/workflows/robin.yml
@@ -1,7 +1,6 @@
 name: Robin AI Reviewer
 
 on:
-  # skip draft PRs
   pull_request:
     - opened
     - reopened
@@ -13,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Robin AI Reviewer
-        uses: Integral-Healthcare/robin-ai-reviewer@v[INSERT_LATEST_RELEASE]
+      - uses: Integral-Healthcare/robin-ai-reviewer@v[INSERT_LATEST_RELEASE]
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPEN_AI_API_KEY: ${{ secrets.OPEN_AI_API_KEY }}
