--- a/package.json
+++ b/package.json
@@ -9,36 +9,17 @@
       "name": "Anton Trofymenko"
     }
   ],
-  "dependencies": {
-    "@await-of/of": "2.4.10"
-  },
   "description": "Filesystem abstraction layer and common function wrappers",
   "devDependencies": {
     "@r37r0m0d3l/rollup-config-pkg": "git+https://github.com/r37r0m0d3l/rollup-config-pkg.git",
-    "@types/node": "18.15.12",
-    "babel-eslint": "10.1.0",
-    "eslint": "8.38.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-jsdoc": "43.0.6",
-    "eslint-plugin-prettier": "4.2.1",
-    "npm-check": "6.0.1",
-    "prettier": "2.8.7",
-    "remark-cli": "11.0.0",
-    "remark-lint": "9.1.1",
-    "remark-preset-lint-consistent": "5.1.1",
-    "remark-preset-lint-markdown-style-guide": "5.1.2",
-    "remark-preset-lint-recommended": "6.1.2"
+    "@types/node": "16.11.7"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=16.17.0"
   },
   "engineStrict": true,
   "exports": {
     ".": {
-      "browser": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.cjs"
-      },
       "node": {
         "import": "./dist/index.mjs",
         "require": "./dist/index.cjs"
@@ -78,13 +59,11 @@
     "build": "rollup --config rollup.config.mjs",
     "build:watch": "rollup --config rollup.config.mjs --watch",
     "lint": "eslint ./src/**/*.js",
-    "lint:md": "remark .",
-    "package:upgrade": "npx npm-check --update",
     "test": "npm run test:cjs && npm run test:mjs",
     "test:cjs": "node --test ./test/index.test.cjs",
     "test:mjs": "node --test ./test/index.test.mjs"
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "1.0.2"
+  "version": "1.1.0"
 }
